    - api/migratelog/get (with processid)
+ support logging by command line running
+ support multi models

2025-02-15
+ support download/report logging error api
    - report/migrate/log        -> default as text file
    - report/migrate/log/txt    -> text file
    - report/migrate/log/json   -> json file

2025-02-18
+ can download file from URL (support import by download file)
+ can auto naming download file

2025-02-19
+ can transfer file from server (support import by ftp file)
+ can auto naming transfer file
+ can using key file (with OpenSSH format)

2025-02-23
+ can import file from mail attachment
+ can auto naming file from mail attachment

2025-02-25
+ can import with vary date format
+ can mix date format with TH/EN locale

2025-02-26
+ can import with reconcile file (cross check between : data file & reconcile file)
(reconcile file contain number of total records)

2025-02-27
+ can import with filter data setting

2025-02-28
+ can custom post statement error handler
+ can cancel error code
+ can custom detect error key (since error object from db throwing was depend on driver usage)

2025-03-02
+ support statement elements
+ can validate statement required parameter

2025-03-04
+ support task setting screen (emte001)

2025-03-14
+ fixed xlsx reading data array reform into object (test_file_api)
+ support reconcile parameter when invoke api
+ support parameter setting when call api & db by connection setting 
(test_simple_call_api_param & test_simple_call_db_param)
+ support base64 data submit (specifiedy by parameter datafile)
(test_simple_text_base64 & test_simple_xlsx_base64)

2025-03-21
+ support complex request api parameters
+ support api response xml (detect from header content-type or config.options.acceptType == 'text/xml')
+ support extract data 
+ support export file (csv,fix-length,xml,json,excel,pdf)
+ add new table schema tmigratefile to keep export data file (see database/migratedb_mysql.sql)